--- a/.env
+++ b/.env
@@ -33,3 +33,10 @@ DATABASE_URL=mysql://vagrant:vagrant@127.0.0.1:3306/demo
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=gmail://[emailaddress]:[password]@localhost?encryption=tls&auth_mode=oauth
 ###< symfony/swiftmailer-bundle ###
+
+###> app/service/exchange-calendar-generator ###
+EXCHANGE_CALENDAR_HOST=examplehost.com
+EXCHANGE_CALENDAR_USERNAME=example
+EXCHANGE_CALENDAR_PASSWORD=example
+EXCHANGE_CALENDAR_VERSION=2013
+###< app/service/exchange-calendar-generator ###
