--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
     "devDependencies": {
         "@babel/polyfill": "^7.4.4",
-        "@babel/preset-env": "^7.0.0",
+        "@babel/preset-env": "^7.4.5",
         "@babel/preset-react": "^7.0.0",
-        "@symfony/webpack-encore": "^0.22.0",
+        "@symfony/webpack-encore": "^0.22.4",
+        "core-js": "^2.6.9",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-redux": "^7.0.1",
+        "react-redux": "^7.1.0",
         "redux": "^4.0.1",
-        "webpack-notifier": "^1.6.0"
+        "webpack-notifier": "^1.8.0"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -20,15 +21,15 @@
     },
     "dependencies": {
         "@nivo/line": "^0.56.2",
-        "axios": "^0.18.0",
+        "axios": "^0.18.1",
         "classnames": "^2.2.6",
-        "immutability-helper": "^3.0.0",
-        "node-sass": "^4.11.0",
+        "immutability-helper": "^3.0.1",
+        "node-sass": "^4.12.0",
         "react-autobind": "^1.0.6",
-        "react-dnd": "^7.4.5",
-        "react-dnd-html5-backend": "^7.4.4",
-        "react-modal": "^3.8.1",
-        "react-tooltip": "^3.9.2",
+        "react-dnd": "^7.7.0",
+        "react-dnd-html5-backend": "^7.7.0",
+        "react-modal": "^3.8.2",
+        "react-tooltip": "^3.10.0",
         "sass-loader": "^7.1.0"
     }
 }
