--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,9 @@
       "@babel/preset-env",
       {
         "targets": ">1%, not ie 11",
-        "useBuiltIns": "entry",
-        "debug": true
+        "useBuiltIns": "usage",
+        "debug": true,
+        "corejs": 2
       }
     ],
     [
