--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "hashids/hashids": "^4.0",
+        "lightsaml/lightsaml": "^1.4",
         "php-ews/php-ews": "^1.0",
         "ramsey/uuid-doctrine": "^1.5",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
+        "symfony/event-dispatcher": "4.2.*",
         "symfony/expression-language": "4.2.*",
         "symfony/flex": "^1.1",
         "symfony/form": "4.2.*",
