--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "axios": "^0.18.1",
         "classnames": "^2.2.6",
         "immutability-helper": "^3.0.1",
+        "moment": "^2.24.0",
         "node-sass": "^4.12.0",
         "react-autobind": "^1.0.6",
         "react-dnd": "^7.7.0",
