Bugs and optimizations

--- a/.babelrc
+++ b/.babelrc
@@ -12,5 +12,8 @@
     [
       "@babel/preset-react"
     ]
+  ],
+  "plugins": [
+    ["@babel/plugin-proposal-decorators", {"legacy": true}]
   ]
 }
