--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
     "devDependencies": {
+        "@babel/plugin-proposal-decorators": "^7.4.4",
         "@babel/polyfill": "^7.4.4",
-        "@babel/preset-env": "^7.4.5",
+        "@babel/preset-env": "^7.5.5",
         "@babel/preset-react": "^7.0.0",
-        "@symfony/webpack-encore": "^0.22.4",
+        "@symfony/webpack-encore": "^0.28.0",
         "core-js": "^2.6.9",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
+        "react": "^16.9.0",
+        "react-dom": "^16.9.0",
         "react-redux": "^7.1.0",
-        "redux": "^4.0.1",
+        "redux": "^4.0.4",
         "webpack-notifier": "^1.8.0"
     },
     "license": "UNLICENSED",
@@ -20,8 +21,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@nivo/line": "^0.56.2",
-        "axios": "^0.18.1",
+        "@nivo/line": "^0.59.3",
+        "autobind-decorator": "^2.4.0",
+        "axios": "^0.19.0",
         "classnames": "^2.2.6",
         "immutability-helper": "^3.0.1",
         "moment": "^2.24.0",
@@ -29,8 +31,8 @@
         "react-autobind": "^1.0.6",
         "react-dnd": "^7.7.0",
         "react-dnd-html5-backend": "^7.7.0",
-        "react-modal": "^3.8.2",
+        "react-modal": "^3.9.1",
         "react-tooltip": "^3.10.0",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.2.0"
     }
 }
