Start mariadb as root

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: php
 php:
   - '7.3'
-sudo: false
+sudo: true
 dist: bionic
 addons:
   - mariadb: '10.0'
 before_install:
-  - systemctl start mysqld
+  - sudo systemctl start mysqld
   - mysql -e 'CREATE SCHEMA IF NOT EXISTS demo;'
   - mysql -e 'USE mysql;'
   - mysql -e 'CREATE USER "vagrant"@"localhost" IDENTIFIED BY "vagrant";'
