--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "private": true,
     "scripts": {
         "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "dev": "encore dev --watch",
+        "prod": "encore production --progress"
     },
     "dependencies": {
         "@nivo/line": "^0.59.3",
