--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,10 @@
 # define your env variables for the test env here
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
-SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
+DATABASE_URL=mysql://vagrant:vagrant@127.0.0.1:3306/demo_test
+MAILER_URL=
+EXCHANGE_CALENDAR_HOST=
+EXCHANGE_CALENDAR_USERNAME=
+EXCHANGE_CALENDAR_PASSWORD=
+EXCHANGE_CALENDAR_VERSION=
