--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 language: php
 php:
-  - '7.3'
+  - 7.4
 sudo: false
 dist: bionic
 addons:
-  - mariadb: '10.1'
-before_install:
-  - mysql -e 'CREATE SCHEMA IF NOT EXISTS demo;'
-  - mysql -e 'USE mysql;'
-  - mysql -e 'CREATE USER "vagrant"@"localhost" IDENTIFIED BY "vagrant";'
-  - mysql -e 'GRANT ALL PRIVILEGES ON demo.* TO "vagrant"@"localhost";'
-  - mysql -e 'FLUSH PRIVILEGES;'
+  - mariadb: 10.5
 install:
-  - composer install
+  - sudo mysql -e 'CREATE SCHEMA IF NOT EXISTS demo;'
+  - sudo mysql -e 'USE mysql;'
+  - sudo mysql -e 'CREATE USER "vagrant"@"localhost" IDENTIFIED BY "vagrant";'
+  - sudo mysql -e 'GRANT ALL PRIVILEGES ON demo.* TO "vagrant"@"localhost";'
+  - sudo mysql -e 'FLUSH PRIVILEGES;'
+  - composer dump-autoload
+  - composer i --no-scripts
   - php bin/console --no-interaction doctrine:migrations:migrate
   - php bin/console --no-interaction doctrine:fixtures:load
