--- a/composer.json
+++ b/composer.json
@@ -2,46 +2,50 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.4.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "hashids/hashids": "^4.0",
-        "lightsaml/lightsaml": "^1.4",
+        "composer/package-versions-deprecated": "1.11.99.2",
+        "doctrine/common": "^3.0",
+        "doctrine/doctrine-bundle": "^2.4.2",
+        "doctrine/doctrine-migrations-bundle": "^3.1.1",
+        "doctrine/orm": "^2.9.3",
+        "hashids/hashids": "^4.1",
+        "lightsaml/lightsaml": "^2.1",
         "php-ews/php-ews": "^1.0",
         "ramsey/uuid-doctrine": "^1.5",
-        "sensio/framework-extra-bundle": "^5.2",
-        "symfony/asset": "4.4.*",
-        "symfony/console": "4.4.*",
-        "symfony/dotenv": "4.4.*",
-        "symfony/event-dispatcher": "4.4.*",
-        "symfony/expression-language": "4.4.*",
+        "sensio/framework-extra-bundle": "^6.1",
+        "symfony/asset": "5.3.*",
+        "symfony/console": "5.3.*",
+        "symfony/dotenv": "5.3.*",
+        "symfony/event-dispatcher": "5.3.*",
+        "symfony/expression-language": "5.3.*",
         "symfony/flex": "^1.1",
-        "symfony/form": "4.4.*",
-        "symfony/framework-bundle": "4.4.*",
+        "symfony/form": "5.3.*",
+        "symfony/framework-bundle": "5.3.*",
+        "symfony/intl": "5.3.*",
+        "symfony/mailer": "5.3.*",
         "symfony/monolog-bundle": "^3.3",
-        "symfony/orm-pack": "^1.0",
-        "symfony/process": "4.4.*",
-        "symfony/security-bundle": "4.4.*",
+        "symfony/process": "5.3.*",
+        "symfony/security-bundle": "5.3.*",
         "symfony/serializer-pack": "*",
-        "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/templating": "4.4.*",
-        "symfony/translation": "4.4.*",
-        "symfony/twig-bundle": "4.4.*",
-        "symfony/validator": "4.4.*",
-        "symfony/web-link": "4.4.*",
+        "symfony/templating": "5.3.*",
+        "symfony/translation": "5.3.*",
+        "symfony/twig-bundle": "5.3.*",
+        "symfony/validator": "5.3.*",
+        "symfony/web-link": "5.3.*",
         "symfony/webpack-encore-bundle": "^1.0",
-        "symfony/yaml": "4.4.*"
+        "symfony/yaml": "5.3.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
-        "symfony/browser-kit": "4.4.*",
-        "symfony/css-selector": "4.4.*",
+        "symfony/browser-kit": "5.3.*",
+        "symfony/css-selector": "5.3.*",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.11",
         "symfony/phpunit-bridge": "^5.1",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "4.4.*"
+        "symfony/test-pack": "*"
     },
     "config": {
         "preferred-install": {
@@ -69,8 +73,8 @@
     },
     "scripts": {
         "update-scripts": {
-          "cache:clear": "symfony-cmd",
-          "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "auto-scripts": {
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
@@ -89,7 +93,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.4.*"
+            "require": "5.3.*"
         }
     }
 }
