--- a/package.json
+++ b/package.json
@@ -1,37 +1,41 @@
 {
-    "devDependencies": {
-        "@babel/plugin-proposal-decorators": "^7.10.4",
-        "@babel/polyfill": "^7.10.4",
-        "@babel/preset-env": "^7.10.4",
-        "@babel/preset-react": "^7.10.4",
-        "@symfony/webpack-encore": "^0.28.3",
-        "core-js": "^2.6.11",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-redux": "^7.2.0",
-        "redux": "^4.0.5",
-        "webpack-notifier": "^1.8.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev --watch",
-        "prod": "encore production --progress"
-    },
-    "dependencies": {
-        "@nivo/line": "^0.59.3",
-        "autobind-decorator": "^2.4.0",
-        "axios": "^0.19.2",
-        "classnames": "^2.2.6",
-        "immutability-helper": "^3.1.1",
-        "moment": "^2.27.0",
-        "node-sass": "^4.14.1",
-        "react-autobind": "^1.0.6",
-        "react-dnd": "^7.7.0",
-        "react-dnd-html5-backend": "^7.7.0",
-        "react-modal": "^3.11.2",
-        "react-tooltip": "^3.11.6",
-        "sass-loader": "^7.3.1"
-    }
+  "name": "signal",
+  "version": "1.0.0",
+  "description": "",
+  "main": "webpack.config.js",
+  "directories": {
+    "test": "tests"
+  },
+  "scripts": {
+    "dev": "encore dev --watch",
+    "prod": "encore production --progress"
+  },
+  "author": "dustinscarberry",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.10.4",
+    "@babel/polyfill": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@nivo/line": "^0.72.0",
+    "@symfony/webpack-encore": "^1.5.0",
+    "autobind-decorator": "^2.4.0",
+    "axios": "^0.21.1",
+    "classnames": "^2.2.6",
+    "core-js": "^2.6.11",
+    "immutability-helper": "^3.1.1",
+    "moment": "^2.27.0",
+    "react": "^16.13.1",
+    "react-autobind": "^1.0.6",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
+    "react-dom": "^16.14.0",
+    "react-modal": "^3.11.2",
+    "react-redux": "^7.2.0",
+    "react-tooltip": "^4.2.21",
+    "redux": "^4.0.5",
+    "sass": "^1.35.2",
+    "sass-loader": "^12.1.0",
+    "webpack-notifier": "^1.8.0"
+  }
 }
