--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.4.0",
+        "php": ">=7.4.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "composer/package-versions-deprecated": "1.11.99.2",
+        "doctrine/annotations": "^1.0",
         "doctrine/common": "^3.0",
         "doctrine/doctrine-bundle": "^2.4.2",
         "doctrine/doctrine-migrations-bundle": "^3.1.1",
@@ -13,39 +13,44 @@
         "hashids/hashids": "^4.1",
         "lightsaml/lightsaml": "^2.1",
         "php-ews/php-ews": "^1.0",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.2",
         "ramsey/uuid-doctrine": "^1.5",
         "sensio/framework-extra-bundle": "^6.1",
-        "symfony/asset": "5.3.*",
-        "symfony/console": "5.3.*",
-        "symfony/dotenv": "5.3.*",
-        "symfony/event-dispatcher": "5.3.*",
-        "symfony/expression-language": "5.3.*",
-        "symfony/flex": "^1.1",
-        "symfony/form": "5.3.*",
-        "symfony/framework-bundle": "5.3.*",
-        "symfony/intl": "5.3.*",
-        "symfony/mailer": "5.3.*",
+        "symfony/asset": "5.4.*",
+        "symfony/console": "5.4.*",
+        "symfony/dotenv": "5.4.*",
+        "symfony/event-dispatcher": "5.4.*",
+        "symfony/expression-language": "5.4.*",
+        "symfony/flex": "^1.3.1",
+        "symfony/form": "5.4.*",
+        "symfony/framework-bundle": "5.4.*",
+        "symfony/intl": "5.4.*",
+        "symfony/mailer": "5.4.*",
         "symfony/monolog-bundle": "^3.3",
-        "symfony/process": "5.3.*",
-        "symfony/security-bundle": "5.3.*",
-        "symfony/serializer-pack": "*",
-        "symfony/templating": "5.3.*",
-        "symfony/translation": "5.3.*",
-        "symfony/twig-bundle": "5.3.*",
-        "symfony/validator": "5.3.*",
-        "symfony/web-link": "5.3.*",
+        "symfony/process": "5.4.*",
+        "symfony/property-access": "5.4.*",
+        "symfony/property-info": "5.4.*",
+        "symfony/security-bundle": "5.4.*",
+        "symfony/serializer": "5.4.*",
+        "symfony/templating": "5.4.*",
+        "symfony/translation": "5.4.*",
+        "symfony/twig-bundle": "5.4.*",
+        "symfony/validator": "5.4.*",
+        "symfony/web-link": "5.4.*",
         "symfony/webpack-encore-bundle": "^1.0",
-        "symfony/yaml": "5.3.*"
+        "symfony/yaml": "5.4.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
-        "symfony/browser-kit": "5.3.*",
-        "symfony/css-selector": "5.3.*",
-        "symfony/debug-pack": "*",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.4.*",
+        "symfony/css-selector": "5.4.*",
+        "symfony/debug-bundle": "^5.4",
         "symfony/maker-bundle": "^1.11",
         "symfony/phpunit-bridge": "^5.1",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*"
+        "symfony/stopwatch": "^5.4",
+        "symfony/web-profiler-bundle": "^5.4"
     },
     "config": {
         "preferred-install": {
@@ -68,8 +73,7 @@
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
         "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
+        "symfony/polyfill-php70": "*"
     },
     "scripts": {
         "update-scripts": {
@@ -93,7 +97,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.3.*"
+            "require": "5.4.*"
         }
     }
 }
