--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -77,7 +77,7 @@ jobs:
         run: php bin/console doctrine:migrations:migrate
 
       - name: Load Doctrine fixtures
-        run: php bin/console doctrine:fixtures:load --group=TestFixtures -n
+        run: php bin/console doctrine:fixtures:load --group=DemoFixtures -n
 
       - name: Run functional and unit tests
         run: ./vendor/bin/phpunit --testsuite='main'
