--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,8 @@ yarn-error.log
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
+
+# docker log files override
+!docker/logs
+
+docker-compose.override.yml
