--- a/.env
+++ b/.env
@@ -26,17 +26,13 @@ APP_SECRET=xxxxxxxxxxxxxxxxxxxxxx
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://vagrant:vagrant@127.0.0.1:3306/demo
 ###< doctrine/doctrine-bundle ###
-
-###> symfony/swiftmailer-bundle ###
-# For Gmail as a transport, use: "gmail://username:password@localhost"
-# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
-# Delivery is disabled by default via "null://localhost"
-MAILER_URL=gmail://[emailaddress]:[password]@localhost?encryption=tls&auth_mode=oauth
-###< symfony/swiftmailer-bundle ###
-
 ###> app/service/exchange-calendar-generator ###
 EXCHANGE_CALENDAR_HOST=examplehost.com
 EXCHANGE_CALENDAR_USERNAME=example
 EXCHANGE_CALENDAR_PASSWORD=example
 EXCHANGE_CALENDAR_VERSION=2013
 ###< app/service/exchange-calendar-generator ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
