--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.1.1",
         "doctrine/orm": "^2.9.3",
         "hashids/hashids": "^4.1",
-        "lightsaml/lightsaml": "^2.1",
+        "litesaml/lightsaml": "^2.1",
         "php-ews/php-ews": "^1.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
