--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,6 @@
     ]
   ],
   "plugins": [
-    ["@babel/plugin-proposal-decorators", {"legacy": true}],
-    "@babel/plugin-proposal-class-properties"
+    ["@babel/plugin-proposal-decorators", {"legacy": true}]
   ]
 }
