--- a/package.json
+++ b/package.json
@@ -13,29 +13,31 @@
   "author": "dustinscarberry",
   "license": "ISC",
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/core": "^7.19.6",
     "@babel/plugin-proposal-decorators": "^7.13.15",
     "@babel/preset-env": "^7.14.1",
     "@babel/preset-react": "^7.13.13",
     "@nivo/line": "^0.74.1",
-    "@symfony/webpack-encore": "^1.5.0",
+    "@symfony/webpack-encore": "^4.1.1",
     "autobind-decorator": "^2.4.0",
-    "axios": "^0.27.2",
+    "axios": "^1.1.3",
     "classnames": "^2.2.6",
     "core-js": "^3.15.2",
     "immutability-helper": "^3.1.1",
     "moment": "^2.27.0",
-    "react": "^16.13.1",
+    "react": "^17.0",
     "react-autobind": "^1.0.6",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-tooltip": "^4.2.21",
     "redux": "^4.0.5",
     "sass": "^1.35.2",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "^13.1.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
     "webpack-notifier": "^1.8.0"
   }
 }
