--- a/package.json
+++ b/package.json
@@ -14,34 +14,38 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.19.6",
-    "@babel/plugin-proposal-decorators": "^7.13.15",
-    "@babel/preset-env": "^7.14.1",
-    "@babel/preset-react": "^7.13.13",
+    "@babel/plugin-proposal-decorators": "^7.20.0",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
     "@nivo/core": "^0.80.0",
-    "@nivo/line": "^0.74.1",
+    "@nivo/line": "^0.80.0",
     "@nivo/tooltip": "^0.80.0",
     "@symfony/webpack-encore": "^4.1.1",
     "autobind-decorator": "^2.4.0",
     "axios": "^1.1.3",
-    "classnames": "^2.2.6",
-    "core-js": "^3.15.2",
+    "classnames": "^2.3.2",
+    "core-js": "^3.26.0",
     "immutability-helper": "^3.1.1",
-    "moment": "^2.27.0",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
-    "react": "^17.0",
+    "react": "^18.2.0",
     "react-autobind": "^1.0.6",
-    "react-dnd": "^14.0.2",
-    "react-dnd-html5-backend": "^14.0.0",
-    "react-dom": "^17.0",
-    "react-modal": "^3.11.2",
-    "react-redux": "^7.2.0",
-    "react-tooltip": "^4.2.21",
-    "redux": "^4.0.5",
-    "sass": "^1.35.2",
+    "react-dnd": "^14.0.5",
+    "react-dnd-html5-backend": "^14.1.0",
+    "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.0.4",
+    "react-tooltip": "^4.4.3",
+    "redux": "^4.2.0",
+    "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-notifier": "^1.8.0"
+    "webpack-notifier": "^1.15.0"
   },
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "yarn@3.2.4",
+  "dependencies": {
+    "@nivo/colors": "^0.80.0",
+    "d3-scale": "^4.0.2"
+  }
 }
