--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,10 +2,7 @@ security:
   password_hashers:
     App\Entity\User:
       algorithm: auto
-
-  # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
   providers:
-    # used to reload user from session & other features (e.g. switch_user)
     app_user_provider:
       entity:
         class: App\Entity\User
@@ -19,22 +16,10 @@ security:
         path: dashboardLogout
         target: /
         invalidate_session: true
-      anonymous: true
-      guard:
-        authenticators:
-          - App\Security\DashboardAuthenticator
-
-      # activate different ways to authenticate
-
-      # http_basic: true
-      # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-
-      # form_login: true
-      # https://symfony.com/doc/current/security/form_login_setup.html
+      custom_authenticators:
+        - App\Security\DashboardAuthenticator
 
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
     - { path: ^/dashboard(?!/login|/logout|/samllogin|/samlvalidate), roles: ROLE_ADMIN }
-    # - { path: ^/admin, roles: ROLE_ADMIN }
-    # - { path: ^/profile, roles: ROLE_USER }
