--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,5 @@
 # define your env variables for the test env here
+APP_ENV=test
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 PANTHER_APP_ENV=panther
