--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "symfony/yaml": "6.2.*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^7.1",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.2.*",
