--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,23 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!-- https://phpunit.de/manual/current/en/appendixes.configuration.html -->
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd" backupGlobals="false" colors="true" bootstrap="config/bootstrap.php">
-  <coverage>
-    <include>
-      <directory>src</directory>
-    </include>
-  </coverage>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/6.5/phpunit.xsd"
+  backupGlobals="false"
+  colors="true"
+  bootstrap="tests/bootstrap.php"
+>
   <php>
-    <ini name="error_reporting" value="-1"/>
-    <env name="APP_ENV" value="test"/>
-    <env name="SHELL_VERBOSITY" value="-1"/>
-    <env name="SYMFONY_DEPRECATIONS_HELPER" value="disabled"/>
+    <ini name="error_reporting" value="-1" />
+    <server name="KERNEL_CLASS" value="App\Kernel" />
+    <env name="APP_ENV" value="test" />
+    <env name="SHELL_VERBOSITY" value="-1" />
+    <env name="SYMFONY_DEPRECATIONS_HELPER" value="disabled" />
   </php>
   <testsuites>
-    <testsuite name="Project Test Suite">
+    <testsuite name="main">
       <directory>tests</directory>
     </testsuite>
   </testsuites>
+  <coverage processUncoveredFiles="true">
+    <include>
+      <directory suffix=".php">src</directory>
+    </include>
+  </coverage>
   <listeners>
-    <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener"/>
+    <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
   </listeners>
+  <extensions>
+    <extension class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension" />
+  </extensions>
 </phpunit>
