--- a/.env.test
+++ b/.env.test
@@ -4,7 +4,7 @@ KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 PANTHER_APP_ENV=panther
 DATABASE_URL=mysql://vagrant:vagrant@127.0.0.1:3306/demo_test
-MAILER_URL=
+MAILER_DSN=smtp://localhost
 EXCHANGE_CALENDAR_HOST=
 EXCHANGE_CALENDAR_USERNAME=
 EXCHANGE_CALENDAR_PASSWORD=
