--- a/package.json
+++ b/package.json
@@ -12,23 +12,25 @@
   },
   "author": "dustinscarberry",
   "license": "ISC",
-  "devDependencies": {
+  "packageManager": "yarn@3.5.1",
+  "dependencies": {
     "@babel/core": "^7.21.8",
     "@babel/plugin-proposal-decorators": "^7.21.0",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
-    "@nivo/core": "^0.80.0",
-    "@nivo/line": "^0.80.0",
-    "@nivo/tooltip": "^0.80.0",
     "@symfony/webpack-encore": "^4.3.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
+    "chartjs-adapter-luxon": "^1.3.1",
     "classnames": "^2.3.2",
     "core-js": "^3.30.2",
     "immutability-helper": "^3.1.1",
+    "luxon": "^3.3.0",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-autobind": "^1.0.6",
+    "react-chartjs-2": "^5.2.0",
     "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^18.2.0",
@@ -41,10 +43,5 @@
     "webpack": "^5.83.0",
     "webpack-cli": "^5.1.1",
     "webpack-notifier": "^1.15.0"
-  },
-  "packageManager": "yarn@3.2.4",
-  "dependencies": {
-    "@nivo/colors": "^0.80.0",
-    "d3-scale": "^4.0.2"
   }
 }
