--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "chartjs-adapter-luxon": "^1.3.1",
     "classnames": "^2.3.2",
     "core-js": "^3.30.2",
-    "immutability-helper": "^3.1.1",
+    "lodash": "^4.17.21",
     "luxon": "^3.3.0",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
@@ -35,9 +35,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
-    "react-redux": "^8.0.5",
     "react-tooltip": "^5.13.1",
-    "redux": "^4.2.1",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
     "webpack": "^5.84.1",
