--- a/.gitignore
+++ b/.gitignore
@@ -270,6 +270,7 @@ yarn-error.log
 ###> symfony/phpunit-bridge ###
 .phpunit
 .phpunit.result.cache
+.phpunit.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 
