--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,33 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <!-- https://phpunit.de/manual/current/en/appendixes.configuration.html -->
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/6.5/phpunit.xsd"
-  backupGlobals="false"
-  colors="true"
-  bootstrap="tests/bootstrap.php"
->
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.2/phpunit.xsd" backupGlobals="false" colors="true" bootstrap="tests/bootstrap.php" cacheDirectory=".phpunit.cache">
   <php>
-    <ini name="error_reporting" value="-1" />
-    <server name="KERNEL_CLASS" value="App\Kernel" />
-    <env name="APP_ENV" value="test" />
-    <env name="SHELL_VERBOSITY" value="-1" />
-    <env name="SYMFONY_DEPRECATIONS_HELPER" value="disabled" />
+    <ini name="error_reporting" value="-1"/>
+    <server name="KERNEL_CLASS" value="App\Kernel"/>
+    <env name="APP_ENV" value="test"/>
+    <env name="SHELL_VERBOSITY" value="-1"/>
+    <env name="SYMFONY_DEPRECATIONS_HELPER" value="disabled"/>
   </php>
   <testsuites>
     <testsuite name="main">
       <directory>tests</directory>
     </testsuite>
   </testsuites>
-  <coverage processUncoveredFiles="true">
+  <coverage/>
+  <extensions>
+    <bootstrap class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension"/>
+  </extensions>
+  <source>
     <include>
       <directory suffix=".php">src</directory>
     </include>
-  </coverage>
-  <listeners>
-    <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
-  </listeners>
-  <extensions>
-    <extension class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension" />
-  </extensions>
+  </source>
 </phpunit>
