--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ DATABASE_URL=mysql://vagrant:vagrant@127.0.0.1:3306/demo
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
