--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
         "ext-iconv": "*",
         "doctrine/annotations": "^2.0",
         "doctrine/common": "^3.0",
+        "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.4.2",
         "doctrine/doctrine-migrations-bundle": "^3.1.1",
-        "doctrine/orm": "^2.9.3",
+        "doctrine/orm": "^3.5",
         "hashids/hashids": "^5.0",
         "litesaml/lightsaml": "^4.1",
         "phpdocumentor/reflection-docblock": "^5.3",
-        "phpstan/phpdoc-parser": "^1.2",
+        "phpstan/phpdoc-parser": "^2.3",
         "ramsey/uuid-doctrine": "^2.0",
         "symfony/asset": "7.3.*",
         "symfony/console": "7.3.*",
@@ -43,8 +44,8 @@
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^8.0",
-        "doctrine/doctrine-fixtures-bundle": "^3.1",
-        "phpunit/phpunit": "^10.2",
+        "doctrine/doctrine-fixtures-bundle": "^4",
+        "phpunit/phpunit": "^12",
         "symfony/browser-kit": "7.3.*",
         "symfony/css-selector": "7.3.*",
         "symfony/debug-bundle": "^7.3",
