--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -17,6 +17,9 @@ doctrine:
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
+        enable_native_lazy_objects: true
+        controller_resolver:
+          auto_mapping: false
         auto_mapping: true
         mappings:
             App:
