--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -3,6 +3,8 @@ framework:
     #default_locale: en
     #csrf_protection: true
     http_method_override: false
+    property_info:
+      with_constructor_extractor: false
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
